--- a/Views/Responsavels/Cadastro.cshtml
+++ b/Views/Responsavels/Cadastro.cshtml
@@ -2,9 +2,8 @@
 
 @{
     ViewBag.Title = "Cadastro";
+    Layout = "~/Views/Shared/_Register.cshtml";
 }
-
-<h2>Cadastro</h2>
 
 
 @using (Html.BeginForm()) 
@@ -12,8 +11,6 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Cadastro</h4>
-        <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
             @Html.LabelFor(model => model.Nome, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -90,7 +87,3 @@
 <div>
     @Html.ActionLink("Back to List", "Index")
 </div>
-
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
