--- a/Content/register.css
+++ b/Content/register.css
@@ -19,3 +19,49 @@
     margin-top: 30px;
 }
 
+.form-horizontal .form-group {
+    margin-right: 10px;
+    margin-left: 10px;
+}
+
+.form-container {
+    display: flex;
+    flex-direction: row;
+
+} 
+
+.form-Box input {
+    max-width: 400px;
+    min-width: 250px;
+}
+
+.form-Box2 input {
+    max-width: 550px;
+    min-width: 400px;
+}
+
+.button-Container {
+    width: 250px;
+}
+
+.button-Container a,
+.button-Container input {
+    background-color: #2c88d9;
+    border: none;
+    width: 100%;
+    height: 34px;
+    border-radius: 5px;
+    color: #ffffff;
+    font-weight: 700;
+    font-size: 16px;
+    cursor: pointer;
+    margin: 0 30px;
+    text-decoration: none;
+    transition: .2s
+}
+
+
+.button-Container a:hover,
+.button-Container input:hover {
+    background-color: #0094ff;
+}
