Alteração na estilização e link pro esqueci a senha

--- a/Views/Responsavels/Acesso.cshtml
+++ b/Views/Responsavels/Acesso.cshtml
@@ -5,38 +5,43 @@
     Layout = "~/Views/Shared/_Register.cshtml";
 }
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
-    <div class="row">
+
+    <div class="form-container">
         <div class="form-horizontal">
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-            <div class="form-group">
-                @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control" } })
+            <div class="form-group form-Box" style="margin-top: 25%">
+                <div class="col-md-12">
+                    @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control", @placeholder = "Digite seu email" } })
                     @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
                 </div>
             </div>
 
-            <div class="form-group">
-                @Html.LabelFor(model => model.Senha, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.Senha, new { htmlAttributes = new { @class = "form-control" } })
+            <div class="form-group form-Box">
+                <div class="col-md-12">
+                    @Html.EditorFor(model => model.Senha, new { htmlAttributes = new { @class = "form-control", @placeholder = "Senha" } })
                     @Html.ValidationMessageFor(model => model.Senha, "", new { @class = "text-danger" })
                 </div>
             </div>
 
+            <div class="form-group text-right" style="margin-right: 9%">
+                @Html.ActionLink("Esqueci a senha", "EsqueciSenha")
+            </div>
+
             <div class="form-group">
-                <div class="col-md-offset-2 col-md-10">
-                    <input type="submit" value="Create" class="btn btn-default" />
+                <div class="btn-container">
+                    <input type="submit" value="Entrar" class="btn button-login" />
+                </div>
+            </div>
+            <div class="form-group" style="margin-top: 25%">
+                <h4 class="text-center">Ainda não tem um cadastro?</h4>
+                <div class="btn-container">
+                    <a class="btn button-login">Cadastrar</a>
                 </div>
             </div>
         </div>
-    </div>
-    <div class="row">
-        @Html.ActionLink("Back to List", "Index")
     </div>
 }
 
