--- a/Views/Shared/_Register.cshtml
+++ b/Views/Shared/_Register.cshtml
@@ -16,7 +16,9 @@
 <body>
 
     <div class="header">
-        <img src="~/Images/Logo 3.0.png" alt="logo" class="img-logo"/>
+        <a src="~/Home/Index">
+            <img src="~/Images/Logo 3.0.png" alt="logo" class="img-logo"/>
+        </a>
     </div>
     <div class="content">
         @RenderBody()
