--- a/Content/register.css
+++ b/Content/register.css
@@ -1,6 +1,6 @@
 ﻿body {
     padding: 0 !important;
-    margin:50px 0 0 0 !important;
+    margin: 50px 0 0 0 !important;
 }
 
 .header {
@@ -27,8 +27,7 @@
 .form-container {
     display: flex;
     flex-direction: row;
-
-} 
+}
 
 .form-Box input {
     max-width: 400px;
@@ -44,15 +43,40 @@
     width: 250px;
 }
 
-.button-Container a,
-.button-Container input {
+    .button-Container a,
+    .button-Container input {
+        background-color: #2c88d9;
+        border: none;
+        width: 100%;
+        height: 34px;
+        border-radius: 5px;
+        color: #ffffff;
+        font-weight: 700;
+        font-size: 16px;
+        cursor: pointer;
+        margin: 0 30px;
+        text-decoration: none;
+        transition: .2s
+    }
+
+
+        .button-Container a:hover,
+        .button-Container input:hover {
+            background-color: #0094ff;
+        }
+
+.btn-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.button-login {
+    width: 80%;
     background-color: #2c88d9;
-    border: none;
-    width: 100%;
-    height: 34px;
     border-radius: 5px;
     color: #ffffff;
-    font-weight: 700;
+    font-weight: 600;
     font-size: 16px;
     cursor: pointer;
     margin: 0 30px;
@@ -60,8 +84,7 @@
     transition: .2s
 }
 
-
-.button-Container a:hover,
-.button-Container input:hover {
+.button-login:hover {
     background-color: #0094ff;
+    color: #fff;
 }
