Funções e configurações pra envio de mail pra redefinir senha

--- a/Views/Responsavels/Acesso.cshtml
+++ b/Views/Responsavels/Acesso.cshtml
@@ -27,7 +27,7 @@
             </div>
 
             <div class="form-group text-right" style="margin-right: 9%">
-                @Html.ActionLink("Esqueci a senha", "EsqueciSenha")
+                @Html.ActionLink("Esqueci a senha", "EsqueceuSenha")
             </div>
 
             <div class="form-group">
