--- a/Views/Responsavels/EsqueceuSenha.cshtml
+++ b/Views/Responsavels/EsqueceuSenha.cshtml
@@ -30,6 +30,10 @@
                     <input type="submit" value="Enviar" class="btn button-login" />
                 </div>
             </div>
+
+            <div class="form-group text-center">
+                @Html.ActionLink("Voltar para o login", "Acesso")
+            </div>
         </div>
     </div>
 }
