--- a/Views/Responsavels/Cadastro.cshtml
+++ b/Views/Responsavels/Cadastro.cshtml
@@ -61,7 +61,8 @@
 
         <div class="form-container">
             <div class="button-Container">
-                @Html.ActionLink("Voltar", "Index")
+                @*@Html.ActionLink("Voltar", "Index")*@
+                <input type="button" value="Voltar" onClick="history.go(-1)">
             </div>
 
             <div class="button-Container">
