--- a/Content/register.css
+++ b/Content/register.css
@@ -40,30 +40,31 @@
 }
 
 .button-Container {
-    width: 250px;
+    width: 230px;
+    margin-right:20px;
+    margin-left:20px
 }
 
-    .button-Container a,
-    .button-Container input {
-        background-color: #2c88d9;
-        border: none;
-        width: 100%;
-        height: 34px;
-        border-radius: 5px;
-        color: #ffffff;
-        font-weight: 700;
-        font-size: 16px;
-        cursor: pointer;
-        margin: 0 30px;
-        text-decoration: none;
-        transition: .2s
-    }
+.button-Container a,
+.button-Container input {
+    background-color: #2c88d9;
+    border: none;
+    width: 100%;
+    height: 34px;
+    border-radius: 5px;
+    color: #ffffff;
+    font-weight: 700;
+    font-size: 16px;
+    cursor: pointer;
+    text-decoration: none;
+    transition: .2s
+}
 
 
-        .button-Container a:hover,
-        .button-Container input:hover {
-            background-color: #0094ff;
-        }
+.button-Container a:hover,
+.button-Container input:hover {
+    background-color: #0094ff;
+}
 
 .btn-container {
     display: flex;
