--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -7,33 +7,39 @@
     <title>@ViewBag.Title - Meu Aplicativo ASP.NET</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+    <link href="~/Content/Home.css" rel="stylesheet" />
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                @Html.ActionLink("Nome do aplicativo", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Início", "Index", "Home")</li>
-                    <li>@Html.ActionLink("Sobre", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contato", "Contact", "Home")</li>
-                </ul>
+    <div class="homeContent">
+        <div class="navBarContainer">
+            <div class="">
+                <div class="navbar-header">
+                    <img src="~/Images/Logo 3.0.png" alt="logo" class="img-logo" />
+                    <div class="menuContainer">
+                        <div class="menulink"><p class="link">Home</p></div>
+                        <div class="menulink"><p class="link">Sobre nós</p></div>
+                        <div class="menulink"><p class="link">Desaparecido</p></div>
+                    </div>
+
+                    <div class="menuContainer">
+                        <div class="menulink"><p class="link">Pessoas Encontradas</p></div>
+                        <div class="menulink"><p class="link">Meus Desaparecidos</p></div>
+                        <div class="menulink"><p class="link">Meus Vulneráveis</p></div>
+                        <div class="menulink"><p class="link">Estatísticas</p></div>
+                    </div>
+
+                    <div class="menuContainer">
+                        <div class="menulink"><p class="link">Perfil</p></div>
+                        <div class="menulink"><p class="link">Dory Gold</p></div>
+                        <div class="menulink"><p class="link">Sair</p></div>
+                    </div>
+                </div>
+
             </div>
         </div>
-    </div>
-    <div class="container body-content">
-        @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - Meu Aplicativo ASP.NET</p>
-        </footer>
+        <div class="contentContainer">
+            @RenderBody()
+        </div>
     </div>
 
     @Scripts.Render("~/bundles/jquery")
