Alterações na home

--- a/Views/Responsavels/Acesso.cshtml
+++ b/Views/Responsavels/Acesso.cshtml
@@ -38,7 +38,7 @@
             <div class="form-group" style="margin-top: 25%">
                 <h4 class="text-center">Ainda não tem um cadastro?</h4>
                 <div class="btn-container">
-                    <a class="btn button-login">Cadastrar</a>
+                    <a href="~/Responsavels/Cadastro" class="btn button-login">Cadastrar</a>
                 </div>
             </div>
         </div>
