--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -16,7 +16,7 @@
                 <div class="navbar-header">
                     <img src="~/Images/Logo 3.0.png" alt="logo" class="img-logo" />
                     <div class="menuContainer">
-                        <div class="menulink"><p class="link">Home</p></div>
+                        <div class="menulink"><a href="~/Home" class="link">Home</a></div>
                         <div class="menulink"><p class="link">Sobre nós</p></div>
                         <div class="menulink"><p class="link">Desaparecido</p></div>
                     </div>
