--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 }
 
     <div class="img-banner">
-        <img src="~/Images/Logo 3.0.png" alt="logo" />
+        <img src="~/Images/BANNER SITE.jpg" alt="logo" />
     </div>
 
 
