--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -39,7 +39,7 @@
                     else
                     {
                         <div class="menuContainer">
-                            <div class="menulink"><a href="~/Responsavels/Acesso" class="link">Entrar</a></div>
+                            <div class="menulink"><a href="~/Responsavels/Acesso" class="btnEntrar">Entrar</a></div>
                             <div class="menulink"><a href="~/Responsavels/Cadastro" class="link">Cadastrar</a></div>
                         </div>
                     }
