--- a/Content/Home.css
+++ b/Content/Home.css
@@ -33,6 +33,7 @@
 
 .link {
     margin-top: 20px;
+
 }
 
 
@@ -43,6 +44,20 @@
 
 .img-banner {
     height: 20px;
+}
+
+.btnEntrar {
+    background-color: #2c88d9;
+    border: none;
+    width: 100%;
+    height: 34px;
+    border-radius: 5px;
+    color: #ffffff;
+    font-weight: 700;
+    font-size: 16px;
+    cursor: pointer;
+    text-decoration: none;
+    transition: .2s
 }
 
 
