--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -39,8 +39,12 @@
                     else
                     {
                         <div class="menuContainer">
-                            <div class="menulink"><a href="~/Responsavels/Acesso" class="btnEntrar">Entrar</a></div>
-                            <div class="menulink"><a href="~/Responsavels/Cadastro" class="link">Cadastrar</a></div>
+                            <div class="btnEntrar">
+                                   <a href="~/Responsavels/Acesso" class="btnEntrar">Entrar</a>
+                             </div>
+                            <div class="menulink"><a href="~/Responsavels/Cadastro" class="link2">Cadastrar</a></div>
+                                    <script src="https://use.fontawesome.com/62e43a72a9.js"></script>
+                            
                         </div>
                     }
                 </div>
