--- a/Content/Home.css
+++ b/Content/Home.css
@@ -23,6 +23,7 @@
 
 .menuContainer {
     margin-top: 60px;
+    margin-left: 15px;
 }
 
 .img-logo {
@@ -47,18 +48,23 @@
 }
 
 .btnEntrar {
+    display: flex;
+    align-items: center;
+    width: 60%;
+    height: 30px;
     background-color: #2c88d9;
-    border: none;
-    width: 100%;
-    height: 34px;
-    border-radius: 5px;
+    border-radius: 15px;
     color: #ffffff;
-    font-weight: 700;
+    font-weight: 600;
     font-size: 16px;
     cursor: pointer;
+    margin: 0 25px;
     text-decoration: none;
-    transition: .2s
+    transition: .2s;
+
 }
 
-
+.link2 {
+    margin-left: 25px
+}
 
