--- a/Content/Home.css
+++ b/Content/Home.css
@@ -43,8 +43,12 @@
     margin-left: 13%;
 }
 
+.img-banner-container {
+    width: 100%;
+}
+
 .img-banner {
-    height: 20px;
+    width: 100%;
 }
 
 .btnEntrar {
@@ -67,4 +71,149 @@
 .link2 {
     margin-left: 25px
 }
+
+.aboutProject {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+
+    justify-content: center;
+    align-items: center;
+}
+
+.aboutProject .about-project-title {
+    font-size: 26px;
+    line-height: 2px;
+    margin-bottom:50px;
+}
+
+.peoples-title {
+    font-size: 26px;
+    text-align: center;
+}
+
+.aboutContainer {
+    display: flex;
+    flex: 1;
+    flex-direction: row;
+}
+
+.img-not-found {
+    width: 40%;
+    margin: 20px 50px;
+}
+
+.text-not-found {
+    width: 40%;
+    margin: auto auto;
+}
+
+.item {
+    width: 20%;
+}
+
+.img-perfil {
+    width: 75px;
+    height: 75px;
+    margin: 10px auto 15px;
+}
+
+
+#exampleSlider {
+    position: relative;
+    margin-bottom: 50px;
+}
+
+@media (max-width: 767px) {
+    #exampleSlider {
+        border-color: transparent;
+    }
+}
+
+#exampleSlider .MS-content {
+    margin: 15px 5%;
+    overflow: hidden;
+    white-space: nowrap;
+}
+
+@media (max-width: 767px) {
+    #exampleSlider .MS-content {
+        margin: 0;
+    }
+}
+
+#exampleSlider .MS-content .item {
+    display: inline-block;
+    height: 100%;
+    overflow: hidden;
+    position: relative;
+    vertical-align: top;
+    border-right: none;
+    width: 20%;
+}
+
+@media (max-width: 1200px) {
+    #exampleSlider .MS-content .item {
+        width: 25%;
+    }
+}
+
+@media (max-width: 992px) {
+    #exampleSlider .MS-content .item {
+        width: 33.3333%;
+    }
+}
+
+@media (max-width: 767px) {
+    #exampleSlider .MS-content .item {
+        width: 50%;
+    }
+}
+
+#exampleSlider .MS-content .item p {
+    font-size: 14px;
+    text-align: center;
+    vertical-align: middle;
+    margin: 0;
+}
+
+#exampleSlider .MS-controls button {
+    position: absolute;
+    border: none;
+    background: transparent;
+    font-size: 30px;
+    outline: 0;
+    top: 80px;
+}
+
+@media (max-width: 767px) {
+    #exampleSlider .MS-controls button {
+        display: none;
+    }
+}
+
+#exampleSlider .MS-controls button:hover {
+    cursor: pointer;
+}
+
+#exampleSlider .MS-controls .MS-left {
+    left: 20px;
+}
+
+@media (max-width: 992px) {
+    #exampleSlider .MS-controls .MS-left {
+        left: -2px;
+    }
+}
+
+#exampleSlider .MS-controls .MS-right {
+    right: 20px;
+}
+
+@media (max-width: 992px) {
+    #exampleSlider .MS-controls .MS-right {
+        right: -2px;
+    }
+}
+
 
