--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,13 +2,194 @@
     ViewBag.Title = "Home Page";
 }
 
-    <div class="img-banner">
-        <img src="~/Images/BANNER SITE.jpg" alt="logo" />
+<div class="img-banner-container">
+    <img src="~/Images/BANNER SITE.jpg" alt="banner" class="img-banner" />
+</div>
+
+<div id="exampleSlider">
+    <h2 class="peoples-title">Pessoas Desaparecidas</h2>
+    <div class="MS-content">
+        <div class="item">
+            <div class="img-perfil">
+                <img src="~/Images/usuario-de-perfil.png" alt="temp" class="img-perfil" />
+            </div>
+            <div>
+                <p class="textname">Nome: Jose</p>
+                <p class="textage">Idade: 38</p>
+            </div>
+
+        </div>
+        <div class="item">
+            <div class="img-perfil">
+                <img src="~/Images/usuario-de-perfil.png" alt="temp" class="img-perfil" />
+            </div>
+            <div>
+                <p class="textname">Nome: Jose</p>
+                <p class="textage">Idade: 38</p>
+            </div>
+
+        </div>
+        <div class="item">
+            <div class="img-perfil">
+                <img src="~/Images/usuario-de-perfil.png" alt="temp" class="img-perfil" />
+            </div>
+            <div>
+                <p class="textname">Nome: Jose</p>
+                <p class="textage">Idade: 38</p>
+            </div>
+
+        </div>
+        <div class="item">
+            <div class="img-perfil">
+                <img src="~/Images/usuario-de-perfil.png" alt="temp" class="img-perfil" />
+            </div>
+            <div>
+                <p class="textname">Nome: Jose</p>
+                <p class="textage">Idade: 38</p>
+            </div>
+
+        </div>
+        <div class="item">
+            <div class="img-perfil">
+                <img src="~/Images/usuario-de-perfil.png" alt="temp" class="img-perfil" />
+            </div>
+            <div>
+                <p class="textname">Nome: Jose</p>
+                <p class="textage">Idade: 38</p>
+            </div>
+
+        </div>
+        <div class="item">
+            <div class="img-perfil">
+                <img src="~/Images/usuario-de-perfil.png" alt="temp" class="img-perfil" />
+            </div>
+            <div>
+                <p class="textname">Nome: Jose</p>
+                <p class="textage">Idade: 38</p>
+            </div>
+
+        </div>
+        <div class="item">
+            <div class="img-perfil">
+                <img src="~/Images/usuario-de-perfil.png" alt="temp" class="img-perfil" />
+            </div>
+            <div>
+                <p class="textname">Nome: Jose</p>
+                <p class="textage">Idade: 38</p>
+            </div>
+
+        </div>
+        <div class="item">
+            <div class="img-perfil">
+                <img src="~/Images/usuario-de-perfil.png" alt="temp" class="img-perfil" />
+            </div>
+            <div>
+                <p class="textname">Nome: Jose</p>
+                <p class="textage">Idade: 38</p>
+            </div>
+
+        </div>
+        <div class="item">
+            <div class="img-perfil">
+                <img src="~/Images/usuario-de-perfil.png" alt="temp" class="img-perfil" />
+            </div>
+            <div>
+                <p class="textname">Nome: Jose</p>
+                <p class="textage">Idade: 38</p>
+            </div>
+
+        </div>
+        <div class="item">
+            <div class="img-perfil">
+                <img src="~/Images/usuario-de-perfil.png" alt="temp" class="img-perfil" />
+            </div>
+            <div>
+                <p class="textname">Nome: Jose</p>
+                <p class="textage">Idade: 38</p>
+            </div>
+
+        </div>
+        <div class="item">
+            <div class="img-perfil">
+                <img src="~/Images/usuario-de-perfil.png" alt="temp" class="img-perfil" />
+            </div>
+            <div>
+                <p class="textname">Nome: Jose</p>
+                <p class="textage">Idade: 38</p>
+            </div>
+
+        </div>
+        <div class="item">
+            <div class="img-perfil">
+                <img src="~/Images/usuario-de-perfil.png" alt="temp" class="img-perfil" />
+            </div>
+            <div>
+                <p class="textname">Nome: Jose</p>
+                <p class="textage">Idade: 38</p>
+            </div>
+
+        </div>
+        <div class="item">
+            <div class="img-perfil">
+                <img src="~/Images/usuario-de-perfil.png" alt="temp" class="img-perfil" />
+            </div>
+            <div>
+                <p class="textname">Nome: Jose</p>
+                <p class="textage">Idade: 38</p>
+            </div>
+
+        </div>
+        <div class="item">
+            <div class="img-perfil">
+                <img src="~/Images/usuario-de-perfil.png" alt="temp" class="img-perfil" />
+            </div>
+            <div>
+                <p class="textname">Nome: Jose</p>
+                <p class="textage">Idade: 38</p>
+            </div>
+
+        </div>
+        <div class="item">
+            <div class="img-perfil">
+                <img src="~/Images/usuario-de-perfil.png" alt="temp" class="img-perfil" />
+            </div>
+            <div>
+                <p class="textname">Nome: Jose</p>
+                <p class="textage">Idade: 38</p>
+            </div>
+
+        </div>
     </div>
+    <div class="MS-controls">
+        <button class="MS-left"><i class="fa fa-chevron-left" aria-hidden="true"></i></button>
+        <button class="MS-right"><i class="fa fa-chevron-right" aria-hidden="true"></i></button>
+    </div>
+</div>
+
+<div class="aboutProject">
+    <h2 class="about-project-title">Sobre o projeto</h2>
+    <div class="aboutContainer">
+        <p class="text-not-found">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ac massa facilisis est egestas venenatis.
+
+            Sed sit amet eros et diam scelerisque fermentum. Nunc nulla leo, imperdiet a lorem ut, sollicitudin placerat dui.
+        </p>
+        <img src="~/Images/image-not-found.jpg" alt="notImage" class="img-not-found" />
+    </div>
+    <div class="aboutContainer">
+        <img src="~/Images/image-not-found.jpg" alt="notImage" class="img-not-found" />
+        <p class="text-not-found">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ac massa facilisis est egestas venenatis.
+
+            Sed sit amet eros et diam scelerisque fermentum. Nunc nulla leo, imperdiet a lorem ut, sollicitudin placerat dui.
+        </p>
+    </div>
+</div>
 
 
+<script src="~/Scripts/jquery-2.2.4.min.js"></script>
+<script src="~/Scripts/multislider.js" ></script>
 
-
-
-
-
+<script>
+    $('#exampleSlider').multislider();
+</script>
