--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -167,7 +167,7 @@
 </div>
 
 <div class="aboutProject">
-    <h2 class="about-project-title">Sobre o projeto</h2>
+    <h2 id="about" class="about-project-title">Sobre o Projeto</h2>
     <div class="aboutContainer">
         <p class="text-not-found">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ac massa facilisis est egestas venenatis.
