Caminho do sobre nós

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -19,7 +19,7 @@
                     <img src="~/Images/Logo 3.0.png" alt="logo" class="img-logo" />
                     <div class="menuContainer">
                         <div class="menulink"><a href="~/Home" class="link">Home</a></div>
-                        <div class="menulink"><a href="#about" class="link">Sobre nós</a></div>
+                        <div class="menulink"><a href="~/Home#about" class="link">Sobre nós</a></div>
                         <div class="menulink"><p class="link">Desaparecido</p></div>
                     </div>
 
