--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -16,7 +16,9 @@
         <div class="navBarContainer">
             <div class="">
                 <div class="navbar-header">
-                    <img src="~/Images/Logo 3.0.png" alt="logo" class="img-logo" />
+                    <a href="~/Home">
+                        <img src="~/Images/Logo 3.0.png" alt="logo" class="img-logo" />
+                    </a>
                     <div class="menuContainer">
                         <div class="menulink"><a href="~/Home" class="link">Home</a></div>
                         <div class="menulink"><a href="~/Home#about" class="link">Sobre nós</a></div>
