--- a/Views/Responsavels/Acesso.cshtml
+++ b/Views/Responsavels/Acesso.cshtml
@@ -15,14 +15,14 @@
             <div class="form-group form-Box" style="margin-top: 25%">
                 <div class="col-md-12">
                     @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control", @placeholder = "Digite seu email" } })
-                    @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
+                    @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger mensagem-erro" })
                 </div>
             </div>
 
             <div class="form-group form-Box">
                 <div class="col-md-12">
                     @Html.EditorFor(model => model.Senha, new { htmlAttributes = new { @class = "form-control", @placeholder = "Senha" } })
-                    @Html.ValidationMessageFor(model => model.Senha, "", new { @class = "text-danger" })
+                    @Html.ValidationMessageFor(model => model.Senha, "", new { @class = "text-danger mensagem-erro" })
                 </div>
             </div>
 
