--- a/Views/Responsavels/Cadastro.cshtml
+++ b/Views/Responsavels/Cadastro.cshtml
@@ -15,47 +15,47 @@
         <div class="form-container">
             <div class="form-group form-Box">
                 @Html.EditorFor(model => model.Nome, new { htmlAttributes = new { @class = "form-control", @placeholder = "Nome" } })
-                @Html.ValidationMessageFor(model => model.Nome, "", new { @class = "text-danger" })
+                @Html.ValidationMessageFor(model => model.Nome, "", new { @class = "text-danger mensagem-erro" })
             </div>
 
             <div class="form-group form-Box">
                 @Html.EditorFor(model => model.Sobrenome, new { htmlAttributes = new { @class = "form-control", @placeholder = "Sobrenome" } })
-                @Html.ValidationMessageFor(model => model.Sobrenome, "", new { @class = "text-danger" })
+                @Html.ValidationMessageFor(model => model.Sobrenome, "", new { @class = "text-danger mensagem-erro" })
             </div>
         </div>
 
         <div class="form-container">
             <div class="form-group form-Box">
                 @Html.EditorFor(model => model.DataNascimento, new { htmlAttributes = new { @class = "form-control", @placeholder = "Data de Nascimento" } })
-                @Html.ValidationMessageFor(model => model.DataNascimento, "", new { @class = "text-danger" })
+                @Html.ValidationMessageFor(model => model.DataNascimento, "", new { @class = "text-danger mensagem-erro" })
             </div>
 
             <div class="form-group form-Box">
                 @Html.EditorFor(model => model.Celular, new { htmlAttributes = new { @class = "form-control", @placeholder = "Celular" } })
-                @Html.ValidationMessageFor(model => model.Celular, "", new { @class = "text-danger" })
+                @Html.ValidationMessageFor(model => model.Celular, "", new { @class = "text-danger mensagem-erro" })
             </div>
         </div>
 
         <div class="form-group form-Box2">
             @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control", @placeholder = "E-mail" } })
-            @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
+            @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger mensagem-erro" })
         </div>
 
         <div class="form-group form-Box2">
             @Html.EditorFor(model => model.ConfirmaEmail, new { htmlAttributes = new { @class = "form-control", @placeholder = "Confirme o email" } })
-            @Html.ValidationMessageFor(model => model.ConfirmaEmail, "", new { @class = "text-danger" })
+            @Html.ValidationMessageFor(model => model.ConfirmaEmail, "", new { @class = "text-danger mensagem-erro" })
         </div>
 
 
         <div class="form-container">
             <div class="form-group form-Box">
                 @Html.EditorFor(model => model.Senha, new { htmlAttributes = new { @class = "form-control", @placeholder = "Senha" } })
-                @Html.ValidationMessageFor(model => model.Senha, "", new { @class = "text-danger" })
+                @Html.ValidationMessageFor(model => model.Senha, "", new { @class = "text-danger mensagem-erro" })
             </div>
 
             <div class="form-group form-Box">
                 @Html.EditorFor(model => model.ConfirmaSenha, new { htmlAttributes = new { @class = "form-control", @placeholder = "Confirme a senha" } })
-                @Html.ValidationMessageFor(model => model.ConfirmaSenha, "", new { @class = "text-danger" })
+                @Html.ValidationMessageFor(model => model.ConfirmaSenha, "", new { @class = "text-danger mensagem-erro" })
             </div>
         </div>
 
