--- a/Views/Responsavels/Redefinir.cshtml
+++ b/Views/Responsavels/Redefinir.cshtml
@@ -20,7 +20,7 @@
             <div class="form-group">
                 <div class="col-md-12">
                     @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control", @placeholder = "Insira seu email cadastrado", @style = "max-width: 70%; margin: 0 auto" } })
-                    @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
+                    @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger mensagem-erro", @style = "max-width: 70%; margin: 0 auto" })
                 </div>
             </div>
 
@@ -36,14 +36,14 @@
             <div class="form-group">
                 <div class="col-md-12">
                     @Html.EditorFor(model => model.Senha, new { htmlAttributes = new { @class = "form-control", @placeholder = "Insira sua nova senha", @style = "max-width: 70%; margin: 0 auto" } })
-                    @Html.ValidationMessageFor(model => model.Senha, "", new { @class = "text-danger" })
+                    @Html.ValidationMessageFor(model => model.Senha, "", new { @class = "text-danger mensagem-erro", @style = "max-width: 70%; margin: 0 auto" })
                 </div>
             </div>
 
             <div class="form-group">
                 <div class="col-md-12">
                     @Html.EditorFor(model => model.ConfirmaSenha, new { htmlAttributes = new { @class = "form-control", @placeholder = "Repita sua nova senha", @style = "max-width: 70%; margin: 0 auto" } })
-                    @Html.ValidationMessageFor(model => model.ConfirmaSenha, "", new { @class = "text-danger" })
+                    @Html.ValidationMessageFor(model => model.ConfirmaSenha, "", new { @class = "text-danger mensagem-erro", @style = "max-width: 70%; margin: 0 auto" })
                 </div>
             </div>
 
