Link pra home nas telas de cadastro

--- a/Views/Shared/_Register.cshtml
+++ b/Views/Shared/_Register.cshtml
@@ -16,7 +16,7 @@
 <body>
 
     <div class="header">
-        <a src="~/Home/Index">
+        <a href="~/Home/Index">
             <img src="~/Images/Logo 3.0.png" alt="logo" class="img-logo" />
         </a>
     </div>
