--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -170,18 +170,23 @@
     <h2 id="about" class="about-project-title">Sobre o Projeto</h2>
     <div class="aboutContainer">
         <p class="text-not-found">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ac massa facilisis est egestas venenatis.
-
-            Sed sit amet eros et diam scelerisque fermentum. Nunc nulla leo, imperdiet a lorem ut, sollicitudin placerat dui.
+            O projeto Dory proporciona ao usuário um sistema web para cadastrar pessoas que desapareceram ou que possam vir a desaparecer,
+            com o objetivo de mediar a relação entre as famílias e terceiros que possam encontrá-las.
+            </br></br>
+            O conceito principal da aplicação é fornecer uma busca prática com dados centralizados, e uma plataforma intuitiva para que o processo seja feito de maneira rápida,
+            segura e eficiente. Além claro, de um serviço de informações didáticas para ocasiões inesperadas.
         </p>
         <img src="~/Images/image-not-found.jpg" alt="notImage" class="img-not-found" />
     </div>
     <div class="aboutContainer">
         <img src="~/Images/image-not-found.jpg" alt="notImage" class="img-not-found" />
         <p class="text-not-found">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ac massa facilisis est egestas venenatis.
+            -Centralizar dados de desaparecidos no Brasil;</br>
+            </br>
+            -Trabalhar na prevenção de desaparecidos;</br>
+            </br>
+            -Disponibilizar informações úteis para buscas de desaparecidos;
 
-            Sed sit amet eros et diam scelerisque fermentum. Nunc nulla leo, imperdiet a lorem ut, sollicitudin placerat dui.
         </p>
     </div>
 </div>
