--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -176,10 +176,10 @@
             O conceito principal da aplicação é fornecer uma busca prática com dados centralizados, e uma plataforma intuitiva para que o processo seja feito de maneira rápida,
             segura e eficiente. Além claro, de um serviço de informações didáticas para ocasiões inesperadas.
         </p>
-        <img src="~/Images/image-not-found.jpg" alt="notImage" class="img-not-found" />
+        <img src="~/Images/banner 2.jpg" alt="notImage" class="img-not-found" />
     </div>
     <div class="aboutContainer">
-        <img src="~/Images/image-not-found.jpg" alt="notImage" class="img-not-found" />
+        <img src="~/Images/banner 3.jpg" alt="notImage" class="img-not-found" />
         <p class="text-not-found">
             -Centralizar dados de desaparecidos no Brasil;</br>
             </br>
